--- a/department-service.properties
+++ b/department-service.properties
@@ -4,4 +4,4 @@ spring.datasource.password =dsbxcreator79%
 spring.jpa.hibernate.ddl-auto=update
 
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
-spring.boot.message = Hello, DepartmentService updated
+spring.boot.message = Hello, Department Service Spring Cloud Bus Demo 
