--- a/employee-service.properties
+++ b/employee-service.properties
@@ -4,4 +4,4 @@ spring.datasource.password =dsbxcreator79%
 server.port=8081
 spring.jpa.hibernate.ddl-auto=update
 eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka/
-spring.boot.message = Hello, Employee Service 
+spring.boot.message = Hello, Employee Service Spring Cloud Bus Demo 
